syntax = "proto3";
package app.sinope.grpc_api.v1.service;
option go_package = "github.com/elizabeth-dev/Sinope-Core/pkg/api";

import "post.model.proto";
import "google/protobuf/empty.proto";

service PostService {
  rpc GetPost(app.sinope.grpc_api.v1.model.GetPostReq) returns (app.sinope.grpc_api.v1.model.Post) {}
  rpc DeletePost(app.sinope.grpc_api.v1.model.DeletePostReq) returns (google.protobuf.Empty) {}
  rpc CreatePost(app.sinope.grpc_api.v1.model.CreatePostReq) returns (app.sinope.grpc_api.v1.model.Post) {}
}
